--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -14,6 +14,10 @@ services:
     networks:
       - app-network
     command: ["./wait-for-it.sh", "rabbit:5672", "--", "python", "orchestrator.py"]
+    volumes:
+      - type: bind
+        source: /var/run/docker.sock
+        target: /var/run/docker.sock
 
 networks:
   app-network:
