--- a/src/orchestrator/testing/docker-compose.yaml
+++ b/src/orchestrator/testing/docker-compose.yaml
@@ -18,12 +18,18 @@ services:
       - type: bind
         source: /var/run/docker.sock
         target: /var/run/docker.sock
+    environment:
+      RABBIT_HOST: ${RABBIT_HOST}
+      REQUEST_QUEUE: ${REQUEST_QUEUE}
 
   tester:
     build: ./
     networks:
       - app-network
     command: ["./wait-for-it.sh", "rabbit:5672", "--", "python", "sender.py"]
+    environment:
+        RABBIT_HOST: ${RABBIT_HOST}
+        REQUEST_QUEUE: ${REQUEST_QUEUE}
 
 
 networks:
