Results getted from container and uploaded to okteto minio pod, need to configure minio structure (buckets, folders, requests,...)

--- a/src/orchestrator/.env
+++ b/src/orchestrator/.env
@@ -1,2 +1,5 @@
 RABBIT_HOST=rabbitmq
 REQUEST_QUEUE=request_queue
+MINIO_CLIENT=minio-oscarvx00.cloud.okteto.net
+MINIO_ACCESS=myaccesskey
+MINIO_SECRET=mysecretkey
