--- a/src/orchestrator/testing/.env
+++ b/src/orchestrator/testing/.env
@@ -1,2 +1,5 @@
 RABBIT_HOST=rabbitmq
 REQUEST_QUEUE=request_queue
+MINIO_CLIENT=minio-oscarvx00.cloud.okteto.net
+MINIO_ACCESS=myaccesskey
+MINIO_SECRET=mysecretkey
