Added gitignore Created minio bucket for user results Added .env file and variables

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -18,9 +18,8 @@ services:
       - type: bind
         source: /var/run/docker.sock
         target: /var/run/docker.sock
-    environment:
-        RABBIT_HOST: ${RABBIT_HOST}
-        REQUEST_QUEUE: ${REQUEST_QUEUE}
+    env_file:
+      - .env
 
 networks:
   app-network:
