--- a/src/orchestrator/testing/.env
+++ b/src/orchestrator/testing/.env
@@ -3,3 +3,4 @@ REQUEST_QUEUE=request_queue
 MINIO_CLIENT=minio-oscarvx00.cloud.okteto.net
 MINIO_ACCESS=myaccesskey
 MINIO_SECRET=mysecretkey
+MINIO_RESULTS_BUCKET=users-results
