Created init container for orchestrator that waits for rabbitmq to get ready Moved orchestrator tests to k8s directory Created wait-for-it image. Could be useful for future deployments Removed wait-for-it from orchestrator image, replaced with init container.

--- a/src/k8s/orchestrator/orchestrator-deploy.yaml
+++ b/src/k8s/orchestrator/orchestrator-deploy.yaml
@@ -11,6 +11,11 @@ spec:
       labels:
         app: orchestrator
     spec:
+      initContainers:
+        - name: wait-for-rabbitmq
+          image: oscarvicente/wait-for-it
+          imagePullPolicy: Never
+          command: ["./wait-for-it.sh", "rabbitmq.default.svc.cluster.local:5672"]
       containers:
         - name: orchestrator
           image: oscarvicente/deepscheduler-orchestrator
