Fixed typo error

--- a/src/k8s/rabbitmq/rabbitmq-deploy.yaml
+++ b/src/k8s/rabbitmq/rabbitmq-deploy.yaml
@@ -20,7 +20,7 @@ spec:
             - name: http
               protocol: TCP
               containerPort: 15672
-            - name: ampq
+            - name: amqp
               protocol: TCP
               containerPort: 5672
       nodeSelector:
