Updated rabbitmq-deploy Using different cuda version for default images

--- a/src/k8s/rabbitmq/rabbitmq-deploy.yaml
+++ b/src/k8s/rabbitmq/rabbitmq-deploy.yaml
@@ -23,5 +23,5 @@ spec:
             - name: amqp
               protocol: TCP
               containerPort: 5672
-      nodeSelector:
-        gpu-node: "false"
+      #nodeSelector:
+      #  gpu-node: "false"
