Login and register templates created

--- a/src/frontend/angular.json
+++ b/src/frontend/angular.json
@@ -103,5 +103,10 @@
       }
     }
   },
+  "schematics": {
+    "@schematics/angular:component": {
+      "style": "scss"
+    }
+  },
   "defaultProject": "deepscheduler-frontend"
 }
