--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -27,6 +27,7 @@
     "@nestjs/mongoose": "^9.0.2",
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
+    "bcrypt": "^5.0.1",
     "mongoose": "^6.2.2",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
@@ -39,6 +40,7 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.4.0",
     "@types/node": "^16.0.0",
