--- a/src/frontend/Dockerfile
+++ b/src/frontend/Dockerfile
@@ -11,5 +11,4 @@ RUN npm run build -- --output-path=./dist/out --configuration $configuration
 FROM nginx
 #Copy ci-dashboard-dist
 COPY --from=build-stage /app/dist/out/ /usr/share/nginx/html
-#Copy default nginx configuration
-COPY ./nginx-custom.conf /etc/nginx/conf.d/default.conf
+EXPOSE 80
