--- a/src/k8s/backend/backend-deploy-dev.yaml
+++ b/src/k8s/backend/backend-deploy-dev.yaml
@@ -20,7 +20,7 @@ spec:
         image: oscarvicente/deepscheduler-backend
         env: 
           - name: BACKEND_HOST
-            value: http://deepscheduler.sytes.net:30003
+            value: http://localhost:3000
           - name: MONGO_HOST
             value: mongodb.default.svc.cluster.local/ds
           - name: GOOGLE_CLIENT_ID
