--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -33,6 +33,7 @@
     "mongoose": "^6.2.2",
     "nodemailer": "^6.7.2",
     "passport": "^0.5.2",
+    "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
