--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -34,6 +34,7 @@
     "nodemailer": "^6.7.2",
     "passport": "^0.5.2",
     "passport-github2": "^0.1.12",
+    "passport-gitlab2": "^5.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
