--- a/src/orchestrator/Dockerfile
+++ b/src/orchestrator/Dockerfile
@@ -3,4 +3,5 @@ WORKDIR /orch
 COPY requirements.txt ./
 RUN pip3 install -r requirements.txt
 COPY orchestrator.py ./
+COPY mongoHandler.py ./
 ENTRYPOINT [ "python", "-u" , "orchestrator.py" ]
