Working on profile. User stats built. Need to store computed time for stats purposes

--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@swimlane/ngx-charts": "^20.1.0",
+    "@types/d3-scale": "^4.0.2",
     "ngx-highlight-js": "^13.0.0",
     "ngx-highlightjs": "^6.1.1",
     "rxjs": "~6.6.0",
@@ -30,6 +32,7 @@
     "@angular-devkit/build-angular": "~12.2.11",
     "@angular/cli": "~12.2.11",
     "@angular/compiler-cli": "~12.2.0",
+    "@types/d3-selection": "^3.0.2",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
