--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -30,6 +30,8 @@
     "@nestjs/mongoose": "^9.0.2",
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/platform-socket.io": "^8.4.1",
+    "@nestjs/websockets": "^8.4.1",
     "amqp-connection-manager": "^4.1.1",
     "amqplib": "^0.8.0",
     "bcrypt": "^5.0.1",
