--- a/src/k8s/backend/backend-service.yaml
+++ b/src/k8s/backend/backend-service.yaml
@@ -13,3 +13,7 @@ spec:
     port: 3000
     targetPort: 3000
     nodePort: 30003
+  - name: websocket
+    port: 3001
+    targetPort: 3001
+    nodePort: 30005
