--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -37,6 +37,7 @@
     "bcrypt": "^5.0.1",
     "handlebars": "^4.7.7",
     "mongoose": "^6.2.2",
+    "nestjs-minio": "^2.1.14",
     "nodemailer": "^6.7.2",
     "passport": "^0.5.2",
     "passport-github2": "^0.1.12",
