--- a/src/k8s/backend/backend-deploy.yaml
+++ b/src/k8s/backend/backend-deploy.yaml
@@ -14,9 +14,8 @@ spec:
       initContainers:
         - name: wait-for-rabbitmq
           image: oscarvicente/wait-for-it
-          #imagePullPolicy: Never 
           command: ["./wait-for-it.sh", "rabbitmq.default.svc.cluster.local:5672"]
-        - name: wait-for-mongo #Can be removed if rabbitmq waits for mongo
+        - name: wait-for-mongo 
           image: oscarvicente/wait-for-it
           command: ["./wait-for-it.sh", "mongodb.default.svc.cluster.local:27017"]
       containers:
