--- a/src/k8s/orchestrator/orchestrator-deploy.yaml
+++ b/src/k8s/orchestrator/orchestrator-deploy.yaml
@@ -14,12 +14,13 @@ spec:
       initContainers:
         - name: wait-for-rabbitmq
           image: oscarvicente/wait-for-it
-          #imagePullPolicy: Never 
           command: ["./wait-for-it.sh", "rabbitmq.default.svc.cluster.local:5672"]
+        - name: wait-for-mongo 
+          image: oscarvicente/wait-for-it
+          command: ["./wait-for-it.sh", "mongodb.default.svc.cluster.local:27017"]
       containers:
         - name: orchestrator
           image: oscarvicente/deepscheduler-orchestrator
-          #imagePullPolicy: Never #For get local image, delete this line when project is finished and images uploaded.
           env:
             - name: RABBIT_HOST
               value: rabbitmq.default.svc.cluster.local
@@ -28,9 +29,16 @@ spec:
             - name: MINIO_CLIENT
               value: minio-oscarvx00.cloud.okteto.net
             - name: MINIO_ACCESS
+              valueFrom:
+                secretKeyRef:
+                  name: orchestrator-secret
+                  key: MINIO_ACCESS
               value: myaccesskey
             - name: MINIO_SECRET
-              value: mysecretkey
+              valueFrom:
+                secretKeyRef:
+                  name: orchestrator-secret
+                  key: MINIO_SECRET
             - name: MINIO_RESULTS_BUCKET
               value: users-results
             - name: MONGO_HOST
