Changes made in rabbitmq connections, need to adapt worker

--- a/src/manager/launcher/Dockerfile
+++ b/src/manager/launcher/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.8-slim-buster
-WORKDIR /orch
+WORKDIR /manager
 COPY requirements.txt ./
 RUN pip3 install -r requirements.txt
-COPY worker.py ./
+COPY manager-launcher.py ./
 COPY mongoHandler.py ./
-ENTRYPOINT [ "python", "-u" , "worker.py" ]
+ENTRYPOINT [ "python", "-u" , "manager-launcher.py" ]
