--- a/src/worker-py/Dockerfile
+++ b/src/worker-py/Dockerfile
@@ -1,7 +1,8 @@
 FROM python:3.8-slim-buster
-WORKDIR /orch
+WORKDIR /worker
 COPY requirements.txt ./
 RUN pip3 install -r requirements.txt
 COPY worker.py ./
 COPY mongoHandler.py ./
+COPY worker_names.txt ./
 ENTRYPOINT [ "python", "-u" , "worker.py" ]
