Created container to read gpu specs from worker node

--- a/src/k8s/frontend/frontend-deploy.yaml
+++ b/src/k8s/frontend/frontend-deploy.yaml
@@ -12,7 +12,7 @@ spec:
         app: deepscheduler-frontend
     spec:
       initContainers:
-        - name: wait-for-mongo
+        - name: wait-for-backend
           image: oscarvicente/wait-for-it
           command: ["./wait-for-it.sh", "deepscheduler-backend.default.svc.cluster.local:3000"]
       containers:
