--- a/src/k8s/worker/worker-deploy.yaml
+++ b/src/k8s/worker/worker-deploy.yaml
@@ -47,6 +47,9 @@ spec:
               name: dockersock
             - mountPath: "/etc/machine-id"
               name: machine-id
+          securityContext:
+            privileged: true
+
       volumes:
         - name: dockersock
           hostPath:
