--- a/src/default-images/pytorch-920M/user-example/Dockerfile
+++ b/src/default-images/pytorch-920M/user-example/Dockerfile
@@ -2,4 +2,5 @@ FROM oscarvicente/deepscheduler-pytorch-920m-cuda-base
 COPY ./ ./
 RUN rm Dockerfile
 RUN pip3 install -r requirements.txt
-ENTRYPOINT [ "python3", "-u", "main.py", "--cuda" ]
+RUN chmod +x entrypoint.sh
+ENTRYPOINT [ "sh", "./entrypoint.sh"]
