--- a/src/default-images/tensorflow/user-example/Dockerfile
+++ b/src/default-images/tensorflow/user-example/Dockerfile
@@ -2,4 +2,5 @@ FROM oscarvicente/deepscheduler-tensorflow-cuda-base
 COPY ./ ./
 RUN rm Dockerfile
 RUN pip3 install -r requirements.txt
-ENTRYPOINT [ "python3", "-u", "bidirectional-rnn.py"]
+RUN chmod +x entrypoint.sh
+ENTRYPOINT [ "sh", "./entrypoint.sh"]
