--- a/src/k8s/database/mongo-storage-class.yaml
+++ b/src/k8s/database/mongo-storage-class.yaml
@@ -1,6 +1,6 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: mongo-local-storage
+  name: mongo-storage
 provisioner: kubernetes.io/no-provisioner
 volumeBindingMode: WaitForFirstConsumer
