--- a/src/k8s/backend/backend-deploy.yaml
+++ b/src/k8s/backend/backend-deploy.yaml
@@ -66,7 +66,9 @@ spec:
           - name: RABBIT_HOST
             value: rabbitmq.default.svc.cluster.local
           - name: MINIO_HOST
-            value: minio-oscarvx00.cloud.okteto.net
+            value: deepscheduler.ddns.net #minio-oscarvx00.cloud.okteto.net
+          - name: MINIO_PORT
+            value: '30012'
           - name: MINIO_ACCESS
             value: myaccesskey
           - name: MINIO_SECRET
