--- a/src/default-images/pytorch/user-build-files/Dockerfile
+++ b/src/default-images/pytorch/user-build-files/Dockerfile
@@ -6,6 +6,5 @@ FROM oscarvicente/deepscheduler-pytorch-920m-cuda-base
 #Install the dependencies specified in requirements.txt
 RUN pip3 install -r requirements.txt
 
-#Do not modify this, instead put the launch command in the last line of entrypoint.sh
-RUN chmod +x entrypoint.sh
-ENTRYPOINT [ "sh", "./entrypoint.sh"]
+#Modify entrypoint to launch yout script
+#ENTRYPOINT [ "python3", "-u", "main.py", "--cuda" ]
