--- a/src/default-images/tensorflow/user-example/Dockerfile
+++ b/src/default-images/tensorflow/user-example/Dockerfile
@@ -2,5 +2,4 @@ FROM oscarvicente/deepscheduler-tensorflow-cuda-base
 COPY ./ ./
 RUN rm Dockerfile
 RUN pip3 install -r requirements.txt
-RUN chmod +x entrypoint.sh
-ENTRYPOINT [ "sh", "./entrypoint.sh"]
+ENTRYPOINT [ "python3", "-u", "main.py"]
