--- a/src/k8s/configurable-reverse-proxy/reverse-proxy-service.yaml
+++ b/src/k8s/configurable-reverse-proxy/reverse-proxy-service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: deepscheduler-reverse-proxy
+  namespace: deepscheduler
   labels:
     app: deepscheduler-reverse-proxy
 spec:
