--- a/src/k8s/database/mongodb-secrets-empty.yaml
+++ b/src/k8s/database/mongodb-secrets-empty.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: mongodb-secret
+  namespace: deepscheduler
 data:
   MONGO_INITD_ROOT_PASSWORD: 
 stringData:
