--- a/src/k8s/backend/backend-secrets-empty.yaml
+++ b/src/k8s/backend/backend-secrets-empty.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: backend-secret
+  namespace: deepscheduler
 type: Opaque
 stringData:
   GOOGLE_CLIENT_ID: 
