--- a/src/k8s/backend/backend-service.yaml
+++ b/src/k8s/backend/backend-service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: deepscheduler-backend
+  namespace: deepscheduler
   labels:
     app: deepscheduler-backend
 spec:
