--- a/src/k8s/database/mongo-storage-class.yaml
+++ b/src/k8s/database/mongo-storage-class.yaml
@@ -2,5 +2,6 @@ apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: mongo-storage
+  namespace: deepscheduler
 provisioner: kubernetes.io/no-provisioner
 volumeBindingMode: WaitForFirstConsumer
