--- a/src/k8s/database/mongodb-pvc.yaml
+++ b/src/k8s/database/mongodb-pvc.yaml
@@ -2,12 +2,13 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: mongodb-pv-claim
+  namespace: deepscheduler
   labels:
     app: mongodb
 spec:
   resources:
     requests:
-      storage: 200Mi
+      storage: 500Mi
   accessModes:
     - ReadWriteOnce
   storageClassName: mongo-storage
