--- a/src/k8s/frontend/frontend-deploy.yaml
+++ b/src/k8s/frontend/frontend-deploy.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: deepscheduler-frontend
+  namespace: deepscheduler
 spec:
   selector:
     matchLabels:
@@ -14,7 +15,7 @@ spec:
       initContainers:
         - name: wait-for-backend
           image: oscarvicente/wait-for-it
-          command: ["./wait-for-it.sh", "deepscheduler-backend.default.svc.cluster.local:3000"]
+          command: ["./wait-for-it.sh", "deepscheduler-backend.deepscheduler.svc.cluster.local:3000"]
       containers:
       - name: deepscheduler-frontend-k8s
         image: oscarvicente/deepscheduler-frontend
