--- a/src/k8s/frontend/frontend-service.yaml
+++ b/src/k8s/frontend/frontend-service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: deepscheduler-frontend
+  namespace: deepscheduler
   labels:
     app: deepscheduler-frontend
 spec:
