--- a/src/k8s/manager/launcher/manager-launcher-deploy.yaml
+++ b/src/k8s/manager/launcher/manager-launcher-deploy.yaml
@@ -2,6 +2,7 @@ apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: manager-launcher
+  namespace: deepscheduler
 spec:
   schedule: "0,15,30,45 * * * *"
   successfulJobsHistoryLimit: 1
@@ -18,8 +19,8 @@ spec:
             image: oscarvicente/deepscheduler-manager-launcher
             env:
               - name: MONGO_HOST
-                value: mongodb://mongodb.default.svc.cluster.local
+                value: mongodb://mongodb.deepscheduler.svc.cluster.local
               - name: RABBIT_HOST
-                value: rabbitmq.default.svc.cluster.local
+                value: rabbitmq.deepscheduler.svc.cluster.local
           restartPolicy: Never
           
