--- a/src/k8s/manager/writer/manager-writer-deploy.yaml
+++ b/src/k8s/manager/writer/manager-writer-deploy.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: manager-writer
+  namespace: deepscheduler
 spec:
   selector:
     matchLabels:
@@ -14,15 +15,15 @@ spec:
       initContainers:
         - name: wait-for-rabbitmq
           image: oscarvicente/wait-for-it
-          command: ["./wait-for-it.sh", "rabbitmq.default.svc.cluster.local:5672"]
+          command: ["./wait-for-it.sh", "rabbitmq.deepscheduler.svc.cluster.local:5672"]
         - name: wait-for-mongo 
           image: oscarvicente/wait-for-it
-          command: ["./wait-for-it.sh", "mongodb.default.svc.cluster.local:27017"]
+          command: ["./wait-for-it.sh", "mongodb.deepscheduler.svc.cluster.local:27017"]
       containers:
       - name: deepscheduler-manager-writer
         image: oscarvicente/deepscheduler-manager-writer
         env:
           - name: MONGO_HOST
-            value: mongodb://mongodb.default.svc.cluster.local
+            value: mongodb://mongodb.deepscheduler.svc.cluster.local
           - name: RABBIT_HOST
-            value: rabbitmq.default.svc.cluster.local
+            value: rabbitmq.deepscheduler.svc.cluster.local
