--- a/src/k8s/minio/minio-pv.yaml
+++ b/src/k8s/minio/minio-pv.yaml
@@ -2,13 +2,14 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: minio-pv
+  namespace: deepscheduler
   labels:
     type: minio
 spec:
   storageClassName: minio-storage
   persistentVolumeReclaimPolicy: Retain
   capacity:
-    storage: 500Mi
+    storage: 2Gi
   accessModes:
     - ReadWriteOnce
   hostPath:
