--- a/src/k8s/minio/minio-pvc.yaml
+++ b/src/k8s/minio/minio-pvc.yaml
@@ -2,12 +2,13 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: minio-pv-claim
+  namespace: deepscheduler
   labels:
     app: minio
 spec:
   resources:
     requests:
-      storage: 500Mi
+      storage: 2Gi
   accessModes:
     - ReadWriteOnce
   storageClassName: minio-storage
