--- a/src/k8s/minio/minio-secrets-empty.yaml
+++ b/src/k8s/minio/minio-secrets-empty.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: minio-secret
+  namespace: deepscheduler
 stringData:
   MINIO_ACCESS: 
   MINIO_SECRET: 
