--- a/src/k8s/rabbitmq/rabbitmq-deploy.yaml
+++ b/src/k8s/rabbitmq/rabbitmq-deploy.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: rabbitmq
+  namespace: deepscheduler
 spec:
   serviceName: rabbitmq
   volumeClaimTemplates: []
