--- a/src/k8s/worker/worker-deploy.yaml
+++ b/src/k8s/worker/worker-deploy.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: DaemonSet
 metadata:
   name: worker
+  namespace: deepscheduler
 spec:
   selector:
     matchLabels:
@@ -14,10 +15,10 @@ spec:
       initContainers:
         - name: wait-for-rabbitmq
           image: oscarvicente/wait-for-it
-          command: ["./wait-for-it.sh", "rabbitmq.default.svc.cluster.local:5672"]
+          command: ["./wait-for-it.sh", "rabbitmq.deepscheduler.svc.cluster.local:5672"]
         - name: wait-for-mongo 
           image: oscarvicente/wait-for-it
-          command: ["./wait-for-it.sh", "mongodb.default.svc.cluster.local:27017"]
+          command: ["./wait-for-it.sh", "mongodb.deepscheduler.svc.cluster.local:27017"]
       containers:
         - name: worker
           image: oscarvicente/deepscheduler-worker
@@ -26,7 +27,7 @@ spec:
               hostPort: 6006
           env:
             - name: RABBIT_HOST
-              value: rabbitmq.default.svc.cluster.local
+              value: rabbitmq.deepscheduler.svc.cluster.local
             - name: REQUEST_QUEUE
               value: request_queue
             - name: MINIO_CLIENT
@@ -44,7 +45,7 @@ spec:
             - name: MINIO_RESULTS_BUCKET
               value: users-results
             - name: MONGO_HOST
-              value: mongodb.default.svc.cluster.local
+              value: mongodb.deepscheduler.svc.cluster.local
             - name: NODE_IP
               valueFrom:
                 fieldRef:
