--- a/src/k8s/worker/worker-secrets-empty.yaml
+++ b/src/k8s/worker/worker-secrets-empty.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: worker-secret
+  namespace: deepscheduler
 type: Opaque
 stringData:
   MINIO_ACCESS: 
